--- a/doc/api_project.json
+++ b/doc/api_project.json
@@ -1,12 +1,14 @@
 {
-  "name": "",
+  "name": "Event Sniff API",
   "version": "0.0.0",
-  "description": "",
+  "description": "Document for Event Sniff",
+  "title": "Just an API",
+  "url": "http://eventsniff-api.pla2app.com",
   "sampleUrl": false,
   "apidoc": "0.2.0",
   "generator": {
     "name": "apidoc",
-    "time": "2015-01-17T04:43:02.972Z",
+    "time": "2015-01-17T09:27:46.152Z",
     "url": "http://apidocjs.com",
     "version": "0.12.1"
   }
