Add tests and update event - Add tests EventCreate - Update Event sniffer and comment count

--- a/tests/api.suite.yml
+++ b/tests/api.suite.yml
@@ -1,6 +1,6 @@
 class_name: ApiTester
 modules:
-    enabled: [PhpBrowser, REST, ApiHelper, Facebook]
+    enabled: [PhpBrowser, ApiHelper, REST, Facebook]
     config:
         PhpBrowser:
             url: http://eventsniff.dev/
