--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 # Configuration
-private/src/Main/DB.php
-private/src/Main/DataModel/Image.php
-private/src/Main/Helper/FacebookHelper.php
+config.php
 
 # Netbeans and phpStorm
 nbproject/*
