Update .htaccess and show facebook id

--- a/.htaccess
+++ b/.htaccess
@@ -11,9 +11,18 @@
 
     RewriteEngine On
     RewriteBase /
+    
+    # Deny Access to Hidden Files and Directories
+    RewriteCond %{SCRIPT_FILENAME} -d [OR]
+    RewriteCond %{SCRIPT_FILENAME} -f
+    RewriteRule "(^|/)\." - [F]
 
     # Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule . index.php/$1 [L]
 </IfModule>
+<IfModule mod_headers.c>
+    Header unset ETag
+</IfModule>
+FileETag None
